yaml/front.yaml
apiVersion: v1
kind: Service
metadata:
  name: planit-front-svc
  namespace: planit
spec:
  type: NodePort
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planit-front-deploy
  namespace: planit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: jybill01/planit-front:v0.9
        ports:
        - containerPort: 80
