yaml/insight.yaml
apiVersion: v1
kind: Service
metadata:
  name: planit-insight-svc
  namespace: planit
spec:
  selector:
    app: insight
  ports:
    - name: http
      port: 8084
      targetPort: 8084
    - name: grpc
      port: 9094
      targetPort: 9094
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planit-insight-deploy
  namespace: planit
spec:
  selector:
    matchLabels:
      app: insight
  template:
    metadata:
      labels:
        app: insight
    spec:
      containers:
      - name: insight
        image: jybill01/planit-insight:v0.3
        ports:
        - containerPort: 8084
        - containerPort: 9094
