yaml/insightai.yaml
apiVersion: v1
kind: Service
metadata:
  name: planit-insightai-svc
  namespace: planit
spec:
  selector:
    app: insightai
  ports:
    - name: http
      port: 8085
      targetPort: 8085
    - name: grpc
      port: 9095
      targetPort: 9095
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planit-insightai-deploy
  namespace: planit
spec:
  selector:
    matchLabels:
      app: insightai
  template:
    metadata:
      labels:
        app: insightai
    spec:
      containers:
      - name: insightai
        image: jybill01/planit-insightai:v0.1
        ports:
        - containerPort: 8085
        - containerPort: 9095
