yaml/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: planit-redis-svc
  namespace: planit
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planit-redis-deploy
  namespace: planit
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
