yaml/schedule.yaml
apiVersion: v1
kind: Service
metadata:
  name: planit-schedule-svc
  namespace: planit
spec:
  selector:
    app: schedule
  ports:
    - name: http
      port: 8082
      targetPort: 8082
    - name: grpc
      port: 9092
      targetPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planit-schedule-deploy
  namespace: planit
spec:
  selector:
    matchLabels:
      app: schedule
  template:
    metadata:
      labels:
        app: schedule
    spec:
      containers:
      - name: schedule
        image: jybill01/planit-schedule:v0.3
        ports:
        - containerPort: 8082
        - containerPort: 9092
