yaml/strategy.yaml
apiVersion: v1
kind: Service
metadata:
  name: planit-strategy-svc
  namespace: planit
spec:
  selector:
    app: strategy
  ports:
    - name: http
      port: 8083
      targetPort: 8083
    - name: grpc
      port: 9093
      targetPort: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planit-strategy-deploy
  namespace: planit
spec:
  selector:
    matchLabels:
      app: strategy
  template:
    metadata:
      labels:
        app: strategy
    spec:
      containers:
      - name: strategy
        image: jybill01/planit-strategy:v0.3
        ports:
        - containerPort: 8083
        - containerPort: 9093
