yaml/user.yaml
apiVersion: v1
kind: Service
metadata:
  name: planit-user-svc
  namespace: planit
spec:
  selector:
    app: user
  ports:
    - name: http
      port: 8081
      targetPort: 8081
    - name: grpc
      port: 9091
      targetPort: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planit-user-deploy
  namespace: planit
spec:
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: jybill01/planit-user:v0.1
        ports:
        - containerPort: 8081
        - containerPort: 9091
